# bazel_sysroot_llvm_amd64

./: Makefile  README.md  SYSROOT_STRUCTURE.md  default.nix  flake.nix
bazel/: BUILD.bazel  README.md  cc_toolchain_config.bzl
sysroot/: BUILD.bazel  cc_toolchain_config.bzl
